# bAbI-steps

./: .gitignore  LICENSE  README.md  format.sh  main.py  pyproject.toml  requirements-lint.txt
app/: locations.py
app/basemodels/: generators.py  nodes.py
app/utils/: logger.py
babisteps/: datasets.py  locations.py  logger.py  operators.py  proccesing.py  utils.py
babisteps/basemodels/: FOL.py  complextracking.py  generators.py  groups.py  immediateorder.py  listing.py  nodes.py  order.py  pathfinding.py  simpletracking.py  stories.py  temporaltracking.py
babisteps/lm_eval/: README.md  _generate_configs.py
babisteps/lm_eval/chat-cot/: _default_template_yaml  babisteps.yaml  babisteps_task_01-simpletracking.yaml  babisteps_task_02-immediateorder.yaml  babisteps_task_03-complextracking.yaml  babisteps_task_04-listing.yaml  babisteps_task_05-sizeorder.yaml  babisteps_task_06-spatialorder.yaml  babisteps_task_07-temporalorder.yaml  utils.py
babisteps/lm_eval/default/: _default_template_yaml  babisteps.yaml  babisteps_task_01-simpletracking.yaml  babisteps_task_02-immediateorder.yaml  babisteps_task_03-complextracking.yaml  babisteps_task_04-listing.yaml  babisteps_task_05-sizeorder.yaml  babisteps_task_06-spatialorder.yaml  utils.py  (+1 more)
babisteps/tasks/: README.md  commons.yaml
babisteps/utils/: logger.py  operators.py  proccesing.py
dev/: README.md
examples/: ActorInLocation.ipynb  ComplexTracking.ipynb  EntitiesInCoordinates.ipynb  InmediateOrder.ipynb  Listing.ipynb  Order.ipynb  PathFinding.ipynb  SimpleTracking.ipynb  TemporalTracking.ipynb
(+24 files in other folders)
