[tool.poetry]
name = "bAbI-steps"
version = "0.1.0"
description = ""
authors = ["Nicolas Aguirre <nicolasaguirre90@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
outlines = {extras = ["transformers", "vllm"], version = "^0.1.10"}
pydantic = "^2.10.4"
ipykernel = "^6.29.5"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
